--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+#header{
+    margin-top: -120px;
+    height: 380px;
+    overflow: hidden;
+}
+
+table{
+    width: 90%;
+}
+
 caption{
     caption-side: bottom;
 }
