--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 }
 
 #interfaceContainer {
+  position: relative;
   background-color: var(--color-ivory);
   box-shadow: 0px 6px 5px var(--color-slate-gray);
   width: 70%;
@@ -34,6 +35,17 @@ body {
 #interfaceContainer button {
   background-color: var(--color-Timberwolf);
   /* transform: skew(-10deg); */
+}
+#btnCreateTask {
+  display: inline-block;
+}
+#interfaceBtnContainer {
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+}
+#interfaceBtnContainer button {
+  margin-left: 2px;
 }
 
 table {
