--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   padding: 0;
   position: relative;
   color: var(--color-gunmetal);
+  font-family: "Jersey 15", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.25rem;
 }
 #header {
   box-shadow: 0px 6px 5px var(--color-slate-gray);
@@ -33,8 +37,13 @@ body {
   padding: 10px;
 }
 #interfaceContainer button {
-  background-color: var(--color-Timberwolf);
-  /* transform: skew(-10deg); */
+  background-color: var(--color-gunmetal);
+  color: var(--color-ivory);
+  padding: 8px;
+  font-family: "Jersey 15", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.25rem;
 }
 #btnCreateTask {
   display: inline-block;
@@ -45,7 +54,7 @@ body {
   right: 10px;
 }
 #interfaceBtnContainer button {
-  margin-left: 2px;
+  margin-left: 5px;
 }
 
 table {
@@ -61,8 +70,13 @@ thead {
   color: var(--color-ivory);
   text-align: left;
 }
-th {
+thead > tr > th:first-child {
   padding: 5px;
+  width: 20px;
+  text-align: center;
+}
+thead > tr > th:nth-child(2) {
+  width: 60%;
 }
 tr.collapse:hover {
   background-color: var(--color-Timberwolf);
