Rédaction du readme

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --color-ivory: rgb(250 252 242);
-  --color-gunmetal: #1c2933;
-  --color-slate-gray: #6d797e;
+  --color-gunmetal: rgb(28 41 51);
+  --color-slate-gray: rgb(109 121 126);
   --color-Timberwolf: rgb(210 214 209);
 }
 
